--- a/_layouts/basic.html
+++ b/_layouts/basic.html
@@ -18,8 +18,8 @@
         <h1><a href="/">Fabian Król</a></h1>
         <img src="http://www.gravatar.com/avatar/3d3f112e31e166e2ad333246c5e08102.png?s=200" />
         <p>
-            Erlang Developer<br />
-            Can't Stop Games
+            Software Developer</br />
+            RedGage, LLC
         </p>
 
         <p class="view">
